test/functoria/e2e/errors/in_functor_not_enough.ml
open Functoria
open E2e

let device = main "Unikernel.Make" (job @-> job)
let () = register "my-app" [ device $ noop ]
